name:                incremental-servant
version:             0.1.0.0
synopsis:            A project demonstrating an incremental takeover of an API using Servant
description:         Please see README.md
homepage:            https://github.com/parsonsmatt/incremental-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Parsons
maintainer:          parsonsmatt@gmail.com
copyright:           2016 Matthew Parsons
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , http-reverse-proxy
                     , http-client
  default-language:    Haskell2010

executable incremental-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , incremental-servant
  default-language:    Haskell2010

test-suite incremental-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , incremental-servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/parsonsmatt/incremental-servant
